# cpp-boilerplate

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.in  READEME.md  README.md
app/: main.cc
include/: example.hh  exampleConfig.h.in
src/: example.cc
tests/: factorial.test.cc  main.cc
